--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website",
-  "homepage": "https://michaelsusanto81.github.io",
+  "homepage": "http://michaelsusanto81.github.io/website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
